# gemini

./: .gitignore  Dockerfile  README.md  config.py  debug.py  docker-compose.yml  extract_and_transform.py  image_recognition.py  pyproject.toml
prompts/: extract_and_transform.txt  image_recognition.txt
